# coilinc

./: .gitignore  README.md
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: app-sidebar.tsx  import-dialog.tsx  method-badge.tsx  nav-user.tsx
ui/src/components/ui/: sidebar.tsx
ui/src/lib/: store.ts
